--- a/misc/misc.cabal
+++ b/misc/misc.cabal
@@ -58,7 +58,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  FunctorApplicativeMonad
+    exposed-modules:  FunctorApplicativeMonad, Fix
 
     -- Modules included in this library but not exported.
     -- other-modules:
