--- a/misc/misc.cabal
+++ b/misc/misc.cabal
@@ -58,7 +58,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  FunctorApplicativeMonad, Fix
+    exposed-modules:  FunctorApplicativeMonad, Fix, MonadTrans
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -67,7 +67,8 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.1.0
+    build-depends:    base ^>=4.17.1.0,
+                      mtl
 
     -- Directories containing source files.
     hs-source-dirs:   src
