post-concurrency seminar

--- a/misc/misc.cabal
+++ b/misc/misc.cabal
@@ -72,7 +72,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.1.0,
+    build-depends:    base,
                       mtl
 
     -- Directories containing source files.
