--- a/misc/misc.cabal
+++ b/misc/misc.cabal
@@ -63,7 +63,8 @@ library
                       MonadTrans,
                       Concurrency,
                       Optics,
-                      AppParsers
+                      AppParsers,
+                      Comonads
 
     -- Modules included in this library but not exported.
     -- other-modules:
