--- a/misc/misc.cabal
+++ b/misc/misc.cabal
@@ -65,6 +65,7 @@ library
                       Optics,
                       AppParsers,
                       Comonads,
+                      ComonadsEfficient,
                       GADTs
 
     -- Modules included in this library but not exported.
@@ -75,10 +76,25 @@ library
 
     -- Other library packages from which modules are imported.
     build-depends:    base,
-                      mtl
+                      mtl,
+                      flow,
+                      containers
 
     -- Directories containing source files.
     hs-source-dirs:   src
 
     -- Base language which the package is written in.
+    default-language: Haskell2010
+
+executable gameOfLife
+    main-is: Main.hs
+    hs-source-dirs: gameOfLife
+    build-depends:  base >=4.11.0.0,
+                    misc
+    ghc-options:
+      -O2
+      -threaded
+      -fprof-auto
+      -prof
+      "-with-rtsopts=-N -p -s -hT -i0.1"  
     default-language: Haskell2010
